Fixed page header overlaps in-page anchors
https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,13 @@
 *, *::before, *::after{
     box-sizing: border-box;
 }
+//https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors
+:target::before {
+  content: "";
+  display: block;
+  height: 80px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
 html {
   scroll-behavior: smooth;
 }
